# lineup-agent

./: .dockerignore  .gitignore  .release-it.json  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
.centy/: .centy-manifest.json  config.json  cspell.json
.centy/issues/: README.md
.centy/issues/09acfa08-6d32-4e47-a6c0-120a50c5eece/: issue.md  metadata.json
.centy/issues/60696f15-cc23-438c-89f5-3a037534cfbc/: issue.md  metadata.json
.centy/issues/6876dba8-f7e7-49d7-9ec2-5378d6ba913b/: issue.md  metadata.json
.centy/issues/8165f8b9-9fcf-42be-9328-e86a2490b9e9/: issue.md  metadata.json
.claude/: settings.json
.github/workflows/: e2e.yml  publish.yml
.husky/: pre-push
docker/: Dockerfile.e2e  docker-compose.e2e.yml
e2e/: setup.ts  vitest.config.ts
e2e/cli/: exit-codes.test.ts  lint-fix.test.ts  lint-json.test.ts  lint.test.ts  rules.test.ts
e2e/fixtures/sample-project/: package.json
e2e/fixtures/sample-project/src/: index.ts
e2e/helpers/: cli.ts  git-repo.ts
e2e/rules/: claude-settings.test.ts  cspell-config.test.ts  husky-init.test.ts
e2e/rules/__snapshots__/: cspell-config.test.ts.snap
e2e/snapshots/: snapshot.test.ts
e2e/snapshots/__snapshots__/: snapshot.test.ts.snap
native/: Cargo.toml
native/src/: engine.rs  lib.rs  types.rs
native/src/rules/: claude_settings.rs  cspell_config.rs  eslint_config_agent.rs  husky_init.rs  mod.rs  pnpm_usage.rs
scripts/: e2e-docker.sh  update-snapshot.sh
src/: cli.ts  index.ts  native.ts
