[package]
name = "lineup-agent"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rule-based linting and enforcement engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
walkdir = "2.5"
thiserror = "2.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = "symbols"
